--- a/public/stylesheets/forms.scss
+++ b/public/stylesheets/forms.scss
@@ -30,6 +30,12 @@ input {
       background-color: lighten($create-color, 10%);
       }
     }
+    &.delete {
+      background-color: $delete-color;
+        &:hover {
+          background-color: lighten($delete-color, 10%);
+        }
+    }
   }
 textarea {
   resize: none;
